--- a/node-test/weAPP/css/identity.css
+++ b/node-test/weAPP/css/identity.css
@@ -1,5 +1,15 @@
-     .header{ background: #8e87eb; position: fixed; z-index: 1; width: 100%; }
-     .header .row_top{ height: 44px; line-height: 44px; color: #fff; font-size: 16px; }
+      .bgPic{
+        position: absolute;
+        background: #fff;
+        width: 100%;
+        height: 100%;
+        background-size: 100% 100%;
+        -webkit-background-size: 100% 100%;
+        -o-background-size: 100% 100%;
+      }
+     .header{ background: #121622;  position: fixed; z-index: 1; width: 100%;}
+     .header .row_top{ height: 48px; line-height: 48px; color: #fff; font-size: 16px; }
+     .header .row_top .ico1{ width: 30px; height: 28px; }
      .header .row_top .tip{ text-align: center; font-weight: 700; }
      .header .row_top .links{ color: #fff; text-decoration: none; }
 
